# VideoAnalyser

./: .gitignore  README.md  pyproject.toml
notebooks/: beat_detector.ipynb  beat_detector2.ipynb  create_auido.ipynb  experiment_with_extracting_video_info.ipynb  make_vector_db_from_video_folder.ipynb  read_vector_db.ipynb  read_video_metadata.ipynb  read_video_metadata_and_write_frames.ipynb  write_data_to_vector_db.ipynb  write_scene_description.ipynb  write_video_description.ipynb
src/video_analyser/: main.py
src/video_analyser/utils/: description_writer.py  metadata_extractor.py  vector_db.py
