[project]
name = "videoanalyser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "geopy>=2.4.1",
    "groq>=0.20.0",
    "opencv-python>=4.11.0.86",
    "pathlib>=1.0.1",
    "pydantic>=2.11.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "python-dotenv>=1.1.0",
]
