[project]
name = "videoanalyser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "demucs>=4.0.1",
    "ffmpeg-python>=0.2.0",
    "geopy>=2.4.1",
    "groq>=0.20.0",
    "instructor>=1.8.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.3",
    "moviepy>=2.1.2",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "pathlib>=1.0.1",
    "pydantic>=2.11.1",
    "pydantic-ai>=0.0.46",
    "pydub>=0.25.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.0.1",
    "simpleaudio>=1.0.4",
    "soundfile>=0.13.1",
    "streamlit>=1.44.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = ["jupyter>=1.1.1", "python-dotenv>=1.1.0"]
